test pour accepter et refuser